--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/node": "^10.12.21",
     "@types/nodemailer": "^4.6.5",
     "@types/uuid": "^3.4.4",
-    "jest": "^24.1.0",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.9",
     "ts-jest": "^23.10.5",
     "ts-node": "^8.0.2",
@@ -40,6 +40,8 @@
     "typescript": "^3.3.3"
   },
   "scripts": {
-    "start": "ts-node-dev --respawn src/index.ts"
+    "start": "ts-node-dev --respawn src/index.ts",
+    "db:setup": "ts-node ./src/test-utils/setup.ts",
+    "test": "npm run db:setup && jest"
   }
 }
