--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "graphql": "^14.1.1",
+    "graphql-query-complexity": "^0.2.2",
     "ioredis": "^4.6.2",
     "nodemailer": "^5.1.1",
     "pg": "^7.8.0",
@@ -26,12 +27,14 @@
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.11",
+    "@types/faker": "^4.1.5",
     "@types/graphql": "^14.0.5",
     "@types/ioredis": "^4.0.6",
     "@types/jest": "^24.0.0",
     "@types/node": "^10.12.21",
     "@types/nodemailer": "^4.6.5",
     "@types/uuid": "^3.4.4",
+    "faker": "^4.1.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
     "ts-jest": "^23.10.5",
